# apikey_auth_rust

./: Cargo.toml  README.md
src/: errors.rs  main.rs
