[package]
name = "api-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = {version = "0.21.4", features = ["tokio-comp"]}
actix-web = "4.0.0-beta.11"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
actix-web-httpauth = "0.6.0-beta.3"
actix-cors = "0.6.0-beta.3"